[project]
name = "libksef"
version = "0.1.0"
authors = [
    { name = "Pawel Stradomski", email = "pstradomski@gmail.com" }
]
description = "Library for reading data from KSEF"
readme = "README.md"
requires-python = ">=3.14"

dependencies = [
    "cryptography",
    "httpx",
    "dotenv",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[project.scripts]
'ksef.notifier' = 'libksef.tools.notifier:main'

[build-system]
requires = ["uv_build>=0.11.19,<0.12"]
build-backend = "uv_build"

[tool.uv]
package = true

[tool.pytest]
addopts = ["-rP"]
log_cli = true
log_cli_level = "INFO"
